--- a/webui/src/theme/base/element-plus/var.scss
+++ b/webui/src/theme/base/element-plus/var.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 /* Element Chalk Variables */
 @use 'sass:math';
 @use 'sass:map';
@@ -48,7 +49,7 @@ $color-info: map.get($colors, 'info', 'base') !default;
   $colors: map.deep-merge(
     (
       $type: (
-        '#{$mode}-#{$number}': mix($mix-color, map.get($colors, $type, 'base'), math.percentage(math.div($number, 10)))
+        '#{$mode}-#{$number}': color.mix($mix-color, map.get($colors, $type, 'base'), math.percentage(math.div($number, 10)))
       )
     ),
     $colors
