--- a/webui/src/theme/mixins/_var.scss
+++ b/webui/src/theme/mixins/_var.scss
@@ -1,6 +1,6 @@
 /*var mixin*/
 @use 'sass:map';
-
+@use "sass:color";
 @use 'config';
 @use 'function' as *;
 
@@ -41,7 +41,14 @@
 // --el-color-$type-rgb: 245, 108, 108;
 @mixin set-css-color-rgb($colors, $type) {
   $color: map.get($colors, $type, 'base');
-  @include set-css-var-value(('color', $type, 'rgb'), #{red($color), green($color), blue($color)});
+  @include set-css-var-value(
+                          ('color', $type, 'rgb'),
+                  #{
+                    color.channel($color, "red", $space: rgb),
+                    color.channel($color, "green", $space: rgb),
+                    color.channel($color, "blue", $space: rgb)
+                  }
+  );
 }
 
 // generate css var from existing css var
